--- a/src/webparts/multiScreenWebPart/components/MultiScreen.module.scss
+++ b/src/webparts/multiScreenWebPart/components/MultiScreen.module.scss
@@ -7,6 +7,7 @@
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
   }
 
+  
   .row {
     @include ms-Grid-row;
     @include ms-fontColor-white;
@@ -18,4 +19,13 @@
     background: #666;
     color: white;
   }
+  .label-custom {
+    margin-top: 0px;
+    margin-right: 4px;
+    margin-bottom: 0px;
+    margin-left: 4px;
+    line-height: 100%;
+    font-weight: 600;
+    background-color: blue($color: #12da33);
+}
 }
